--- a/.gitignore
+++ b/.gitignore
@@ -34,6 +34,11 @@ bld/
 
 # Visual Studio 2015/2017 cache/options directory
 .vs/
+.vs2019/
+.vs2017/
+obj/
+bin/
+
 # Uncomment if you have tasks that create the project's static files in wwwroot
 #wwwroot/
 
