--- a/Bibliothek/Bibliothek/Bibliothek.csproj
+++ b/Bibliothek/Bibliothek/Bibliothek.csproj
@@ -35,6 +35,12 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Compile Update="Kunde\KundeReservierungen.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Update="Kunde\KundeStrafen.cs">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Update="Properties\Resources.Designer.cs">
       <DesignTime>True</DesignTime>
       <AutoGen>True</AutoGen>
